# bit-scan

./: .gitignore  Cargo.toml  README.md  bit-scan.sh  build.rs  build.sh
analytics/: 0_bits.txt  1_bits.txt  analytics.md  bit_block_ratio_changes.txt  bit_block_ratios.txt  bits-visual.txt  bits_pattern_documentation.md  bits_statistic.md  generate_wallet_predictions.py  private_keys_1_70_bit.csv  wallet71_combination_volume.md  wallet71_generation_usage.md  wallet71_prediction_algorithm.md  wallet71_statistical_generation.md
config/: puzzle_addresses.csv
src/: check.rs  main.rs  scan_v1.rs  scan_v3.rs  scan_v3_opencl.rs  scan_v4.rs  utils.rs
src/scan_v2/: constants.rs  generator.rs  mod.rs  model.rs  probability.rs  scan.rs
src/utils/: hash.rs  key.rs  mod.rs  puzzle.rs  storage.rs
