[package]
name = "bit-scan"
version = "4.0.0"
edition = "2024"
build = "build.rs"

[features]
default = ["cuda"]
cuda = ["dep:cudarc"]

[dependencies]
smallvec = '1.13'
clap = { version = "4.5", features = ["derive"] }
bs58 = "0.5.1"
hex = "0.4.3"
k256 = "0.13.4"
ripemd = "0.1.3"
sha2 = "0.10.9"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
libloading = "0.8"
cudarc = { version = "0.17.3", optional = true, default-features = false, features = ["driver", "nvrtc", "std", "cuda-version-from-build-system", "dynamic-linking"] }
opencl3 = { version = "0.12.3", default-features = false, features = ["dynamic"] }
